<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/fetchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fetch_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:indeterminate="false"
            android:max="100"
            app:layout_constraintBottom_toBottomOf="@id/fetchButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fetchButton" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/blocksRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/cacheHitLegend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fetchButton" />

        <TextView
            android:id="@+id/cacheHitLegend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/green_circle_shape"
            android:drawablePadding="5dp"
            android:text="@string/local_cache_hit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cacheMissLegend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawableStart="@drawable/red_circle_shape"
            android:drawablePadding="5dp"
            android:text="@string/local_cache_miss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cacheHitLegend" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>