<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.akochb1onboarding.viewmodel.BlockDetailActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="producerSignatureLabelTextView,
        producerLabelTextView, transactionNumberLabelTextView, showRawBlockCheckBox" />

        <TextView
            android:id="@+id/producerLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/block_producer_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Producer" />

        <TextView
            android:id="@+id/producerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/producerLabelTextView"
            tools:text="AKoch" />

        <TextView
            android:id="@+id/producerSignatureLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/block_producer_signature_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/producerTextView"
            tools:text="Signature" />

        <TextView
            android:id="@+id/producerSignatureTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/producerSignatureLabelTextView"
            tools:text="AKoch Signature" />

        <TextView
            android:id="@+id/transactionNumberLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/block_transaction_count_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/producerSignatureTextView"
            tools:text="Transaction Count" />

        <TextView
            android:id="@+id/transactionNumberTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/transactionNumberLabelTextView"
            tools:text="1" />

        <CheckBox
            android:id="@+id/showRawBlockCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingEnd="10dp"
            android:text="@string/block_detail_show_more"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionNumberTextView" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/showRawBlockCheckBox">

            <TextView
                android:id="@+id/rawBlockTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>